Compiler/Examples/ERROR/_m.slang
unit Person
	foo do
		b is not isMarried()
		a is not this ()
		c is not return.a.b()
	end
end